--- a/package.json
+++ b/package.json
@@ -27,25 +27,26 @@
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "7.1.2",
-    "cordova-plugin-camera": "4.0.3",
+    "angular": "^1.7.7",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.2.1",
+    "cordova-plugin-ionic-webview": "^2.4.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-support-google-services": "1.1.0",
+    "cordova-support-google-services": "^1.1.0",
+    "ionic": "^4.10.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "phonegap-plugin-multidex": "1.0.0",
-    "phonegap-plugin-push": "2.2.3",
+    "phonegap-plugin-multidex": "^1.0.0",
+    "phonegap-plugin-push": "^2.2.3",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.0",
+    "@ionic/app-scripts": "^3.2.3",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
@@ -65,8 +66,6 @@
       },
       "cordova-plugin-camera": {}
     },
-    "platforms": [
-      "android"
-    ]
+    "platforms": []
   }
 }
