--- a/package.json
+++ b/package.json
@@ -22,16 +22,20 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/camera": "^4.17.0",
     "@ionic-native/core": "~4.12.0",
+    "@ionic-native/local-notifications": "^4.20.0",
     "@ionic-native/push": "^4.17.0",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.1.3",
     "angular": "^1.7.7",
-    "cordova-plugin-camera": "^4.0.3",
+    "cordova-android": "7.1.4",
+    "cordova-browser": "5.0.4",
+    "cordova-plugin-badge": "0.8.8",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.4.1",
+    "cordova-plugin-local-notification": "0.9.0-beta.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -64,8 +68,11 @@
         "ANDROID_SUPPORT_V13_VERSION": "27.+",
         "FCM_VERSION": "11.6.2"
       },
-      "cordova-plugin-camera": {}
+      "cordova-plugin-local-notification": {}
     },
-    "platforms": []
+    "platforms": [
+      "browser",
+      "android"
+    ]
   }
 }
